# axis-core

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  RELEASING.md  REPO_MAP.md  pyproject.toml  pytest.ini
.agent/maps/: adapters.md  build_release.md  configs_env.md  domain_core.md  engine_lifecycle.md  meta_process.md  protocols_types.md  testing_quality.md
.github/workflows/: quality-gates.yml
axis_core/: __init__.py  agent.py  attachments.py  budget.py  cancel.py  checkpoint.py  config.py  context.py  errors.py  redaction.py  result.py  session.py  tool.py
axis_core/_tests/: test_agent.py  test_budget.py  test_config.py  test_context.py  test_errors.py  test_lockfile.py  test_result.py
axis_core/adapters/memory/: __init__.py  ephemeral.py  redis.py  sqlite.py
axis_core/adapters/models/: __init__.py  anthropic.py  openai.py  openai_responses.py
axis_core/engine/: __init__.py  event_types.py  lifecycle.py  registry.py  resolver.py  trace_collector.py
axis_core/protocols/: __init__.py  memory.py  model.py  planner.py  telemetry.py
docs/: examples.md  getting-started.md
docs/guides/: budget-and-limits.md  models.md  runtime-operations.md  tools.md
docs/reference/: agent.md  config.md  env-vars.md  errors.md
examples/: README.md  autoplanner_example.py  react_planner_example.py  simple_tool_agent.py
scripts/: README.md  bump_version.sh  check_acceptance_contracts.py  check_doc_policy_consistency.py  check_memory_hygiene.py  check_production_safety_gate.py  publish.sh  pypi_checklist.md  test_install.sh
tests/: test_agent.py  test_attachments.py  test_budget.py  test_cancel.py  test_config.py  test_context.py  test_errors.py  test_lockfile.py  test_redaction.py  test_session.py  test_tool.py
tests/engine/: test_first_cycle_model_calling.py  test_lifecycle.py  test_multi_cycle_integration.py  test_real_llm_integration.py  test_registry.py  test_resolver.py  test_tool_integration.py
tests/protocols/: test_planner.py  test_telemetry.py
(+37 files in other folders)
