[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "axis-core"
version = "0.3.0"
description = "A modular, observable AI agent framework"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [
    { name = "Axis Core Contributors" }
]
keywords = ["ai", "agent", "llm", "framework", "anthropic", "openai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]

dependencies = [
    "pydantic>=2.0",
    "python-dotenv>=1.0",
    "httpx>=0.24",
]

[project.optional-dependencies]
anthropic = ["anthropic>=0.18"]
openai = ["openai>=1.0"]
redis = ["redis>=5.0"]
sqlite = ["aiosqlite>=0.19"]
ollama = ["ollama>=0.1"]
full = [
    "axis-core[anthropic]",
    "axis-core[openai]",
    "axis-core[redis]",
    "axis-core[sqlite]",
    "axis-core[ollama]",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.0",
    "mypy>=1.8",
    "ruff>=0.2",
    "fakeredis>=2.20",
]

[project.urls]
Homepage = "https://github.com/axis-core/axis-core"
Documentation = "https://axis-core.readthedocs.io"
Repository = "https://github.com/axis-core/axis-core"
Issues = "https://github.com/axis-core/axis-core/issues"

[tool.hatch.build.targets.wheel]
packages = ["axis_core"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "PT"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
